--- a/public/css/all.css
+++ b/public/css/all.css
@@ -7,6 +7,7 @@
 .far,
 .fal,
 .fab {
+  font-family: "Font Awesome 5 Brands";
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   display: inline-block;
