--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,12 +8,14 @@
         color : #FED136;
     }  */
 
-.nav-item:active
-    {
-        color : #FED136;
-    }
-
-
+a:active, #test:active {
+		color:#FED136;
+}
+.nav-link
+{
+	color:#E35352!important;
+}
+/* Partie Event */ 
     @import url("http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,400italic");
     @import url("//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css");
 
